# babyolive

./: .gitignore  CMakeLists.txt  README.md  consoleui.cpp
BabyOlive/: consoleui.cpp  consoleui.h  csvhandler.cpp  csvhandler.h  main.cpp  manager.cpp  manager.h  product.cpp  product.h  productmanager.cpp  productmanager.h  usermanager.cpp  util.h
data/: carts.csv  product.csv  users.csv
include/: cart.h  cartmanager.h  consoleui.h  csvhandler.h  manager.h  product.h  productmanager.h  user.h  usermanager.h  util.h
src/: cart.cpp  cartmanager.cpp  consoleui.cpp  main.cpp  product.cpp  productmanager.cpp  user.cpp  usermanager.cpp
